--- a/app/assets/stylesheets/my_theme.scss
+++ b/app/assets/stylesheets/my_theme.scss
@@ -105,10 +105,10 @@ p {
     img, iframe {
       max-width: 720px;
       @media(max-width: 543px){
-        max-width: 320px;
+        max-width: 320px !important;
       }
       @media(min-width: 544px) and (max-width: 767px) {
-        max-width: 420px;
+        max-width: 420px !important;
       }
       @media(min-width: 768px) and (max-width: 992px) {
         max-width: 520px !important;
@@ -124,10 +124,10 @@ p {
   img, iframe {
     max-width: 720px;
     @media(max-width: 543px){
-      max-width: 320px;
+      max-width: 320px !important;
     }
     @media(min-width: 544px) and (max-width: 767px) {
-      max-width: 420px;
+      max-width: 420px !important;
     }
     @media(min-width: 768px) and (max-width: 992px) {
       max-width: 520px !important;
